--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
     "stream-throttle": "^0.1.3",
     "ws": "^7.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "standard": "^16.0.4"
+  }
 }
